[package]
name = "ctx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "macros" ] }
tokio = { version = "1", features = ["full"] }
