[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
ctx = { path = "../ctx" }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "macros" ] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"