[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
player = { path = "../player" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
warp = "0.3.5"
futures-util = "0.3.28"
tokio-stream = "0.1.14"
