[package]
name = "titan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
room = { path = "../room" }
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" ] }
toml = "0.7.3"
