[package]
name = "titan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
room = { path = "../room" }
server = { path = "../server" }
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "macros" ] }
toml = "0.7.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }